# onnx

./: .gitignore  1_output.avi  Cargo.toml  IntelliBox.Task.Dispatch.1xxx_output.avi  main.py  yolo.py
src/: lib.rs  main.rs
src/client/: mod.rs  nats.rs
src/convert/: mod.rs  opencv.rs
src/event/: mod.rs
src/processor/: manager.rs  mod.rs  video.rs
src/report/: mod.rs
src/tasks/: mod.rs
src/utils/: file.rs  logger.rs  mod.rs
src/yolo/: cli.rs  mod.rs  model.rs  ort.rs  ort_backend.rs
