[package]
name = "pineal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
lazy_static = "1.4.0"
nats = "0.25.0"
serde = {  version = "1.0.202", features = ["derive"]  }
serde_json = "1.0.117"
tokio =  { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
log = "0.4.21"
opencv = {  version = "0.91.3", features = ["highgui", "videoio", "cudacodec"]  }
chrono = "0.4.38"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rusttype = { version = "0.9", default-features = false }
dirs = { version = "5.0.1" }
ureq = { version = "2.9.1" }
half = { version = "2.3.1" }
regex = { version = "1.5.4" }
ort =  {version = "1.16.3", default-features = false, features = ["load-dynamic", "copy-dylibs", "half"]}
ndarray = { version = "0.15.6" }
clap = { version = "4.2.4", features = ["derive"] }
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png", "webp-encoder"] }
imageproc = { version = "0.23.0", default-features = false }
rand = "0.8.5"
rayon = "1.10.0"
flamegraph = "0.6.5"

[dependencies.ort_2]
package = "ort"
version = "=2.0.0-rc.2"
default-features = false
features = ["load-dynamic", "copy-dylibs", "half", "ndarray"]
